# tencent-cloud-whitelist-updater

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  README.txt  config.example.yaml  config.yaml  main.py  pyproject.toml  requirements.dev.txt  requirements.txt  setup.py
.github/workflows/: test.yml
tests/: __init__.py  test-updater.py  test_base_cloud_provider.py  test_huawei_cloud.py  test_ip_fetcher.py  test_main.py  test_tencent_cloud.py  test_updater.py
update_whitelist/: __init__.py  config.py  ip_fetcher.py  logger.py  main.py  scheduler.py  updater.py
update_whitelist/cloud_providers/: __init__.py  base.py  base_cloud_provider.py  huawei.py  huawei_cloud.py  tencent.py  tencent_cloud.py
update_whitelist/config/: config.py  config_loader.py
update_whitelist/utils/: config_loader.py  logger.py
