[project]
name = "update-whitelist"
dynamic = ["version"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
description = "A tool to update cloud provider whitelists"
requires-python = ">=3.9"
dependencies = [
    "pyyaml~=6.0.1",
    "huaweicloudsdkcore~=3.1.99",
    "huaweicloudsdkvpc~=3.1.99",
    "pydantic~=2.7.4",
    "requests~=2.32.3", "APScheduler~=3.10.4",
    "tencentcloud_sdk_python_common~=3.0.1174",
    "tencentcloud_sdk_python_vpc~=3.0.1174"
]

[project.optional-dependencies]
dev = [
    "pytest~=8.2.2",
    "pytest-mock~=3.14.0",
    "pytest-cov~=5.0.0"
]

[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
pythonpath = ["."]

[tool.setuptools_scm]
write_to = "update_whitelist/_version.py"